# learning_programing_list

./: .gitignore  README.md  transforms.py
agent_program/: img.py  search.ipynb  search.py  search2.ipynb  utils.py
data_engineering/data_apps/: app.py
data_engineering/data_pipeline_dlt/: chess_pipeline.py  requirements.txt
data_engineering/duckdb_project/: add_column_valid_until.sql  create_table_prices.sql  create_table_readings.sql  create_table_systems.sql  creating_multiple_groups.sql  populate_readings.sql  replacing_a_subquery.sql  selecting_a_graph_shaped_structure.sql
data_engineering/duckdb_python_ecosystem/: querying_csv_file.py
infra/: buzz2.db  create_buzz2db.py  select_buzz2db.py
infra/duckdb_project/: connect.py  populate_prices.sql  (+2 more)
jax_tutorial/: jax_tutorial.ipynb
mlops/training/: Dockerfile  docker-compose.yml  makefile  pyproject.toml
mlops/training/iris_project/: Dockerfile  MLproject  iris_train.py  makefile  profiler.py  requirements.txt
mlops/training/model_db/: Dockerfile  docker-compose.yml  makefile  requirements.txt  run.sh
mlops/training/model_db/src/: configurations.py
mlops/training/model_db/src/api/: app.py
mlops/training/model_db/src/api/routers/: api.py  health.py
mlops/training/model_db/src/db/: cruds.py  database.py  initialize.py  models.py  schemas.py
models/: model_spec.py
notebook/: Untitled.ipynb
statistical/: plot.py  stats.py
statistical_learning/: transforms.py
statistics/: first.py  first_test.py  nsfg.py  nsfg_test.py  plot.py  probability.py  probability2.py  relay.py  stats.py
(+46 files in other folders)
