[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "gunicorn>=23.0.0",
    "h11>=0.14.0",
    "httptools>=0.6.4",
    "joblib>=1.4.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.3",
    "pyparsing>=3.2.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
    "uvloop>=0.21.0",
]
